# pipeline

./: .gitignore  README.md
.github/workflows/: custom.yml  default.yml
pipeline/: args.py  constants.py  generator.py  pipeline.py  templates.py  validator.py
pipeline/templates/: base.yml
pipeline/templates/node/: build.yml  deploy.yml  test.yml
pipeline/templates/python/: deploy.yml  test.yml
projects/products/: .gitignore  Dockerfile  README.md  pyproject.toml
projects/products/app/: main.py
projects/products/app/controllers/: products.py
projects/products/app/models/: product.py
projects/products/app/routes/: product.py
projects/products/tests/: conftest.py
projects/products/tests/integration/: test_product.py
projects/users/: .env.example  Dockerfile  README.md  app.ts  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  tsconfig.json
projects/users/api/config/: config.ts
projects/users/api/controllers/: address.ts  user.ts
projects/users/api/factories/: address.ts  user.ts
projects/users/api/interfaces/: address.ts  user.ts  zipcode.ts
projects/users/api/routes/: address.ts  index.ts  user.ts
projects/users/api/services/: address.ts  user.ts  zipcode.ts
projects/users/prisma/: seed.ts
projects/users/prisma/schema/: address.prisma  schema.prisma  user.prisma
projects/users/tests/: address.controller.e2e.ts  address.service.spec.ts
