[tool.poetry]
name = "tooling-interview-python"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
